--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
             <%= link_to 'いいねした歌', likes_user_path(id: current_user.id), method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <%= link_to '設定', edit_user_registration_path, method: :get, class: 'dropdown-item' %>
-            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+            <%= link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
             <div class="dropdown-divider"></div>
             <%= link_to 'ご案内', infos_path, method: :get, class: 'dropdown-item' %>
             <%= link_to '寄付のお願い', donations_path, method: :get, class: 'dropdown-item' %>
