--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -36,6 +36,13 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2022/02/27</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>短歌削除後にマイページに遷移するように変更</li>
+        <li>iOSでの短歌編集画面の投稿日時フォームの表示崩れを解消</li>
+      </ul>
+    </dd>
     <dt><time>2021/11/07</time></dt>
     <dd>
       <ul class="ml">
