設定画面の文言を調整

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -41,6 +41,7 @@
       <ul class="ml">
         <li>短歌削除後にマイページに遷移するように変更</li>
         <li>iOSでの短歌編集画面の投稿日時フォームの表示崩れを解消</li>
+        <li>設定画面の文言を調整</li>
       </ul>
     </dd>
     <dt><time>2021/11/07</time></dt>
