Twitterログインを修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <h5 class="mt-4 mb-3">Twitterアカウントで登録する</h5>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <div class="mb-3">
-      <%= link_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary', data: { turbo_method: :post } do %>
+      <%= button_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary', data: { turbo_method: :post } do %>
         <i class="bi bi-twitter text-white"></i> 登録する
       <% end %>
     </div>
