--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -4,14 +4,14 @@
     <%- if size == 'sm' -%>
       <span class="<%= size -%> like"><%= post.followings.length -%></span>
     <%- elsif size == 'lg' -%>
-      <%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: "#{size} like" -%>
+      <%= link_to @post.followings.length, followers_post_path(id: @post.id), class: "#{size} like", data: { turbo: false } -%>
     <%- end -%>
   <%- else -%>
     <%= link_to content_tag(:i, '', class: "#{size} bi bi-suit-heart"), favorites_path(follow: post.id, size: size), data: { turbo_method: :post } -%>
     <%- if size == 'sm' -%>
       <span class="<%= size -%> like"><%= post.followings.length -%></span>
     <%- elsif size == 'lg' -%>
-      <%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: "#{size} like" -%>
+      <%= link_to @post.followings.length, followers_post_path(id: @post.id), class: "#{size} like", data: { turbo: false } -%>
     <%- end -%>
   <%- end -%>
 <%- end -%>
