--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -36,6 +36,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2022/03/01</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>いいねした歌人の一覧画面に遷移できない問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2022/02/27</time></dt>
     <dd>
       <ul class="ml">
@@ -54,7 +60,7 @@
     <dt><time>2021/11/01</time></dt>
     <dd>
       <ul class="ml">
-        <li>フォームとラベルが対応していなかった問題を解消</li>
+        <li>フォームとラベルが対応していない問題を解消</li>
       </ul>
     </dd>
     <dt><time>2021/10/30</time></dt>
