--- a/app/views/posts/followers.html.erb
+++ b/app/views/posts/followers.html.erb
@@ -1,15 +1,7 @@
 <% @title = "#{9829.chr("UTF-8")}#{ApplicationController.helpers.strip_tags(@post.tanka)}" %>
 
 <div class = "vertical serif tanka-index text-nowrap mt-3">
-  <h6>
-    <%= link_to @post.tanka.html_safe, post_path(id: @post.id), method: :get, class: 'tanka-link' %>&nbsp;
-    <% if user_signed_in? && current_user.id != @post.user_id %>
-      <%= render 'favorites/favorites', post: @post, size: 'sm' %>
-    <% else %>
-       <i class="sm bi bi-suit-heart-fill"></i><span class="sm like"><%= @post.followings.length %></span>
-    <% end %>
-    <%= link_to (image_tag @user.avatar.url(:small), class: 'rounded'), user_path(id: @user.id), method: :get, class: 'd-inline-block mb-5' %>
-  </h6>
+  <%= render 'posts/post', post: @post, show_avatar: true %>
   <%= paginate @users %>
   <% @users.each do |user| %>
     <p>
