--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,6 @@
     <% end %>
   </ul>
   <%= paginate @posts %>
-  <%= render 'layouts/posts' %>
+  <%= render 'posts/posts', posts: @posts, show_avatar: true %>
   <%= paginate @posts %>
 </div>
