アカウント登録画面の不具合を解消

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,7 @@
     <dt><time>2022/03/12</time></dt>
     <dd>
       <ul class="ml">
+        <li>アカウント登録画面の不具合を解消</li>
         <li>いいねのレスポンスを改善</li>
       </ul>
     </dd>
