更新履歴を追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -40,7 +40,7 @@
     <dd>
       <ul class="ml">
         <li>アカウント登録画面の不具合を解消</li>
-        <li>いいねのレスポンスを改善</li>
+        <li>サイトのパフォーマンスを改善</li>
       </ul>
     </dd>
     <dt><time>2022/03/01</time></dt>
