--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -36,6 +36,13 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2022/03/20</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>アカウント周りの機能でメッセージが一部表示されない問題を解消</li>
+        <li>サイトのパフォーマンスを改善</li>
+      </ul>
+    </dd>
     <dt><time>2022/03/12</time></dt>
     <dd>
       <ul class="ml">
