--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <meta name="description" content="<%= meta_description(description: @description) %>">
     <% if current_page?(root_path) || current_page?(donations_path) %>
       <meta name="twitter:card" content="summary"/>
-      <meta name="twitter:site" content="@fuyu77"/>
+      <meta name="twitter:site" content="@utakatanka"/>
       <meta property="og:type" content="website"/>
       <meta property="og:title" content="<%= title(title: @title) %>"/>
       <meta property="og:description" content="<%= meta_description(description: @description) %>" />
@@ -29,7 +29,7 @@
     <% end %>
     <% if og_image_url(image_url: @image_url).present? %>
       <meta name="twitter:card" content="summary"/>
-      <meta name="twitter:site" content="@fuyu77"/>
+      <meta name="twitter:site" content="@utakatanka"/>
       <meta property="og:type" content="article"/>
       <meta property="og:title" content="<%= title(title: @title) %>"/>
       <meta property="og:description" content="<%= meta_description(description: @description) %>" />
