--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% @title = @user.name + 'の短歌' %>
-<% @description = @user.name + 'の投稿短歌一覧。' %>
+<% @description = @user.name + 'の投稿短歌。' %>
 <% @image_url = @user.avatar.url(:original) %>
 
 <div class = "vertical serif mt-3 tanka-index">
