--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
     <meta name="msapplication-config" content="https://utakata.s3.amazonaws.com/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-title" content="Utakata">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="短歌,投稿">
     <meta name="description" content="<%= meta_description(description: @description) %>">
+    <meta name="google-site-verification" content="HCpWKa0ogAnRFTAv-LJq2D2GLYzAQI48-_QQIwdn05o" />
     <% if current_page?(root_path) || current_page?(donations_path) %>
       <meta name="twitter:card" content="summary"/>
       <meta name="twitter:site" content="@utakatanka"/>
