--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,11 @@
+<% @title = "#{@tanka}／#{@user.name}" %>
+<% @description = "#{@user.name}の短歌：#{@tanka}" %>
+
 <div class="mt-3 vertical serif mx-auto text-nowrap">
   <%= link_to (image_tag @user.avatar.url(:medium), class: 'rounded'), user_path(id: @user.id), method: :get, class: 'align-middle' %>&nbsp;
   <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'lg tanka-link' %>&nbsp;
   <span class="align-middle"><%= @post.published_at.strftime('%Y.%-m.%-d %-H:%M') %></span>&nbsp;
-  <a href="<%= @twitter_path %>" target="_blank"><i class="align-text-bottom lg bi bi-twitter"></i></a>&nbsp;
+  <a href="<%= @twitter_url %>" target="_blank"><i class="align-text-bottom lg bi bi-twitter"></i></a>&nbsp;
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <% if current_user.following?(@post) %>
       <%= render 'favorites/unlike_lg', post: @post %>
