--- a/app/views/favorites/_like_lg.html.erb
+++ b/app/views/favorites/_like_lg.html.erb
@@ -1,4 +1,8 @@
 <%= turbo_frame_tag dom_id(post) do %>
-  <%= link_to content_tag(:i, '', class: "lg bi bi-suit-heart"), favorites_path(follow: post.id, size: 'lg'), data: { turbo_method: :post } %>
-  <%= link_to @post.followings.length, followers_post_path(id: @post.id), class: "lg like", data: { turbo: false } %>
+  <div>
+    <%= link_to content_tag(:i, '', class: 'lg bi bi-suit-heart'), favorites_path(follow: post.id, size: 'lg'), data: { turbo_method: :post } %>
+  </div>
+  <div>
+    <%= link_to @post.followings.length, followers_post_path(id: @post.id), data: { turbo: false }, class: 'lg favorites-count' %>
+  </div>
 <% end %>
