--- a/app/views/favorites/_unlike_sm.html.erb
+++ b/app/views/favorites/_unlike_sm.html.erb
@@ -1,4 +1,4 @@
 <%= turbo_frame_tag dom_id(post) do %>
   <%= link_to content_tag(:i, '', class: "sm bi bi-suit-heart-fill"), favorite_path(id: post.id, size: 'sm'), data: { turbo_method: :delete }  %>
-  <span class="sm like"><%= post.followings.length %></span>
+  <span class="sm favorites-count"><%= post.followings.length %></span>
 <% end %>
