--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   <% else %>
     <i class="sm bi bi-suit-heart-fill"></i>
-    <span class="sm like"><%= post.followings.length %></span>
+    <span class="sm favorites-count"><%= post.followings.length %></span>
   <% end %>
   <% if show_avatar %>
     <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded'), user_path(id: post.user_id), method: :get, class: 'd-inline-block mb-3' %>
