--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
     <% end %>
   </head>
   <body>
-    <%= render 'layouts/toast' if flash.present? %>
+    <%= render 'layouts/toasts' %>
     <%= render 'layouts/navbar' %>
     <%= yield %>
   </body>
