--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,14 +2,14 @@
   <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
   <% if user_signed_in? && current_user.id != post.user_id %>
     <% if post.followings.any? { |following| following.follower_id == current_user.id } %>
-      <%= render 'favorites/unlike_sm', post: post %>
+      <%= render 'favorites/unlike', post: post, size: 'sm' %>
     <% else %>
-      <%= render 'favorites/like_sm', post: post %>
+      <%= render 'favorites/like', post: post, size: 'sm' %>
     <% end %>
   <% else %>
     <i class="sm bi bi-suit-heart-fill"></i>
-    <span class="sm like"><%= post.followings.length %></span>
   <% end %>
+  <%= render 'favorites/like_count', post: post, size: 'sm' %>
   <% if show_avatar %>
     <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded'), user_path(id: post.user_id), method: :get, class: 'd-inline-block mb-3' %>
   <% end %>
