--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,13 +5,14 @@
   <a href="<%= @twitter_path %>" target="_blank"><i class="align-text-bottom lg bi bi-twitter"></i></a>&nbsp;
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <% if current_user.following?(@post) %>
-      <%= render 'favorites/unlike_lg', post: @post %>
+      <%= render 'favorites/unlike', post: @post, size: 'lg' %>
     <% else %>
-      <%= render 'favorites/like_lg', post: @post %>
+      <%= render 'favorites/like', post: @post, size: 'lg' %>
     <% end %>
   <% else %>
-    <i class="lg bi bi-suit-heart-fill"></i><%= link_to @post.followings.length, followers_post_path(id: @post.id), method: :get, class: 'like lg' %>
+    <i class="lg bi bi-suit-heart-fill"></i>
   <% end %>
+  <%= render 'favorites/like_count', post: @post, size: 'lg' %>
   <% if @user == current_user %>
     <%= link_to '編集', edit_post_path(id: @post.id), method: :get, class: 'd-inline-block align-text-bottom' %>&nbsp;
     <%= link_to '削除', @post, class: 'd-inline-block align-text-bottom', data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' } %>
