--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -36,6 +36,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2022/10/25</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>短歌投稿エラー時にフォームの入力内容をリセットしないように変更</li>
+      </ul>
+    </dd>
     <dt><time>2022/10/23</time></dt>
     <dd>
       <ul class="ml">
