--- a/app/views/favorites/destroy.turbo_stream.erb
+++ b/app/views/favorites/destroy.turbo_stream.erb
@@ -1,6 +1,6 @@
 <%= turbo_stream.replace "like_#{dom_id(@post)}" do %>
   <%= render 'favorites/like', post: @post, size: params[:size] %>
 <% end %>
-<%= turbo_stream.update "like_count_#{dom_id(@post)}" do %>
-  <%= render 'favorites/like_count', post: @post, size: params[:size] %>
+<%= turbo_stream.update "favorites_count_#{dom_id(@post)}" do %>
+  <%= render 'favorites/favorites_count', post: @post, size: params[:size] %>
 <% end %>
