--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,11 +85,11 @@ a:hover {
   border-color: $utakata-green-hover;
 }
 
-.datetime-local {
-  -webkit-appearance: textfield;
-  -ms-appearance: textfield;
-  appearance: textfield;
-}
+// .datetime-local {
+//   -webkit-appearance: textfield;
+//   -ms-appearance: textfield;
+//   appearance: textfield;
+// }
 
 .description {
   margin-left: -2rem;
