--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
+  <%= link_to post.tanka.html_safe, post_path(id: post.id), class: 'tanka-link' %>&nbsp;
   <% if user_signed_in? && current_user.id != post.user_id %>
     <% if post.followings.any? { |following| following.follower_id == current_user.id } %>
       <%= render 'favorites/unlike', post: post, size: 'sm' %>
@@ -11,6 +11,6 @@
   <% end %>
   <%= render 'favorites/favorites_count', post: post, size: 'sm' %>
   <% if show_avatar %>
-    <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded'), user_path(id: post.user_id), method: :get, class: 'd-inline-block mb-3' %>
+    <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded'), user_path(id: post.user_id), class: 'd-inline-block mb-3' %>
   <% end %>
 </p>
