--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-3 vertical serif mx-auto text-nowrap">
-  <%= link_to (image_tag @user.avatar.url(:medium), class: 'rounded'), user_path(id: @user.id), method: :get, class: 'align-middle' %>&nbsp;
-  <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'lg tanka-link' %>&nbsp;
+  <%= link_to (image_tag @user.avatar.url(:medium), class: 'rounded'), user_path(id: @user.id), class: 'align-middle' %>&nbsp;
+  <%= link_to @user.name, user_path(id: @user.id), class: 'lg tanka-link' %>&nbsp;
   <span class="align-middle"><%= @post.published_at.strftime('%Y.%-m.%-d %-H:%M') %></span>&nbsp;
   <a href="<%= @twitter_path %>" target="_blank"><i class="align-text-bottom lg bi bi-twitter"></i></a>&nbsp;
   <% if user_signed_in? && current_user.id != @post.user_id %>
@@ -14,7 +14,7 @@
   <% end %>
   <%= render 'favorites/favorites_count', post: @post, size: 'lg' %>
   <% if @user == current_user %>
-    <%= link_to '編集', edit_post_path(id: @post.id), method: :get, class: 'd-inline-block align-text-bottom' %>&nbsp;
+    <%= link_to '編集', edit_post_path(id: @post.id), class: 'd-inline-block align-text-bottom' %>&nbsp;
     <%= link_to '削除', @post, class: 'd-inline-block align-text-bottom', data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' } %>
   <% end %>
   <p class="lg"><%= @post.tanka.html_safe %></p>
